<resources>
    <string name="app_name">MyFirstApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="my_products">My products</string>
    <string name="account">Account</string>
    <string name="woman_categories">Woman categories</string>
    <string name="men_categories">Men categories</string>
    <string name="favorites">Favorites</string>
    <string name="chats">Chats</string>
</resources>